--- a/ideprojects/Datastore/Datastore.vcxproj.filters
+++ b/ideprojects/Datastore/Datastore.vcxproj.filters
@@ -17,5 +17,19 @@
     <ClInclude Include="..\..\src\datastore\FieldType.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\datastore\Scheme.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\src\datastore\FieldDescriptor.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\src\datastore\Scheme.cpp">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\datastore\FieldDescriptor.cpp">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
