--- a/ideprojects/tests/tests.vcxproj.filters
+++ b/ideprojects/tests/tests.vcxproj.filters
@@ -13,5 +13,13 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Source Files\DataStoreTests">
+      <UniqueIdentifier>{d01c76dd-d06e-493c-99d6-70bd2acfc525}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="..\..\src\datastore\tests\TestScheme.cpp">
+      <Filter>Source Files\DataStoreTests</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
