--- a/ideprojects/Datastore/Datastore.vcxproj.filters
+++ b/ideprojects/Datastore/Datastore.vcxproj.filters
@@ -23,12 +23,18 @@
     <ClInclude Include="..\..\src\datastore\FieldValue.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\datastore\Storage.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\datastore\FieldDescriptor.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="..\..\src\datastore\Scheme.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\src\datastore\FieldType.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
