--- a/ideprojects/tests/tests.vcxproj.filters
+++ b/ideprojects/tests/tests.vcxproj.filters
@@ -5,20 +5,18 @@
       <UniqueIdentifier>{4FC737F1-C7A5-4376-A066-2A32D752A2FF}</UniqueIdentifier>
       <Extensions>cpp;c;cc;cxx;def;odl;idl;hpj;bat;asm;asmx</Extensions>
     </Filter>
-    <Filter Include="Header Files">
-      <UniqueIdentifier>{93995380-89BD-4b04-88EB-625FBE52EBFB}</UniqueIdentifier>
-      <Extensions>h;hh;hpp;hxx;hm;inl;inc;xsd</Extensions>
-    </Filter>
-    <Filter Include="Resource Files">
-      <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
-      <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
-    </Filter>
     <Filter Include="Source Files\DataStoreTests">
       <UniqueIdentifier>{d01c76dd-d06e-493c-99d6-70bd2acfc525}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\datastore\tests\TestScheme.cpp">
+      <Filter>Source Files\DataStoreTests</Filter>
+    </ClCompile>
+    <ClCompile Include="TestDate.cpp">
+      <Filter>Source Files\DataStoreTests</Filter>
+    </ClCompile>
+    <ClCompile Include="TestTime.cpp">
       <Filter>Source Files\DataStoreTests</Filter>
     </ClCompile>
   </ItemGroup>
