--- a/ideprojects/Datastore/Datastore.vcxproj
+++ b/ideprojects/Datastore/Datastore.vcxproj
@@ -15,14 +15,19 @@
     <ClInclude Include="..\..\src\datastore\FieldDescriptor.h" />
     <ClInclude Include="..\..\src\datastore\FieldType.h" />
     <ClInclude Include="..\..\src\datastore\FieldValue.h" />
+    <ClInclude Include="..\..\src\datastore\Logic.h" />
     <ClInclude Include="..\..\src\datastore\Scheme.h" />
     <ClInclude Include="..\..\src\datastore\Storage.h" />
+    <ClInclude Include="..\..\src\datastore\Selection.h" />
+    <ClInclude Include="..\..\src\datastore\Value.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\datastore\Database.cpp" />
     <ClCompile Include="..\..\src\datastore\FieldDescriptor.cpp" />
     <ClCompile Include="..\..\src\datastore\FieldType.cpp" />
+    <ClCompile Include="..\..\src\datastore\Logic.cpp" />
     <ClCompile Include="..\..\src\datastore\Scheme.cpp" />
+    <ClCompile Include="..\..\src\datastore\Selection.cpp" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{A986141E-3FA1-42E1-A865-6EEF5AB6A1A9}</ProjectGuid>
