Added Database unit test Completed insert or replace based on exact-match key values

--- a/ideprojects/tests/tests.vcxproj
+++ b/ideprojects/tests/tests.vcxproj
@@ -12,6 +12,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\datastore\tests\TestScheme.cpp" />
+    <ClCompile Include="TestDatabase.cpp" />
     <ClCompile Include="TestDate.cpp" />
     <ClCompile Include="TestTime.cpp" />
   </ItemGroup>
