--- a/ideprojects/Datastore/Datastore.vcxproj
+++ b/ideprojects/Datastore/Datastore.vcxproj
@@ -14,10 +14,11 @@
     <ClInclude Include="..\..\src\datastore\Database.h" />
     <ClInclude Include="..\..\src\datastore\FieldDescriptor.h" />
     <ClInclude Include="..\..\src\datastore\FieldType.h" />
+    <ClInclude Include="..\..\src\datastore\JsonStorage.h" />
     <ClInclude Include="..\..\src\datastore\Logic.h" />
     <ClInclude Include="..\..\src\datastore\PointerType.h" />
     <ClInclude Include="..\..\src\datastore\Scheme.h" />
-    <ClInclude Include="..\..\src\datastore\Storage.h" />
+    <ClInclude Include="..\..\src\datastore\DataStorage.h" />
     <ClInclude Include="..\..\src\datastore\Selection.h" />
     <ClInclude Include="..\..\src\datastore\Value.h" />
   </ItemGroup>
@@ -25,6 +26,7 @@
     <ClCompile Include="..\..\src\datastore\Database.cpp" />
     <ClCompile Include="..\..\src\datastore\FieldDescriptor.cpp" />
     <ClCompile Include="..\..\src\datastore\FieldType.cpp" />
+    <ClCompile Include="..\..\src\datastore\JsonStorage.cpp" />
     <ClCompile Include="..\..\src\datastore\Logic.cpp" />
     <ClCompile Include="..\..\src\datastore\Scheme.cpp" />
     <ClCompile Include="..\..\src\datastore\Selection.cpp" />
