--- a/ideprojects/Datastore/Datastore.vcxproj.filters
+++ b/ideprojects/Datastore/Datastore.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClInclude Include="..\..\src\datastore\DataStorage.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\src\datastore\Row.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\src\datastore\FieldDescriptor.cpp">
