--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "lib/resource"]
 	path = lib/resource
-	url = git@github.com:mutac/Magnetometer.git
+	url = https://github.com/mutac/Magnetometer.git
